// these are used exclusively for serializing data to a query string efficiently
// it's ugly, but it works lol

syntax = "proto3";

message AllVars {
    int32 version = 1;
    BasicVars basicVars = 2;
    repeated MortgageVars mortgageVars = 3;
}

message MortgageVars {
    int32 startYear = 1;
    double downPct = 2;
    double interestPct = 3;
    double pmiPct = 4;
    int32 termYear = 5;
    double startFeePct = 6;
    double startFee = 7;
    double points = 8;
    bool isArm = 9;
    Arm arm = 10;
}

message Arm {
    double interestFloatPct = 1;
    int32 fixedYear = 2;
}

message BasicVars {
    House house = 1;
    Rent rent = 2;
    Taxes taxes = 3;
    Financial financial = 4;
}

message House {
    double price = 1;
    double apprecPct = 2;
    double remodelCost = 3;
    double sellerCredits = 4;
    double utilitiesMonth = 5;
    double upkeepYear = 6;
    double insurancePct = 7;
    double hoaMonth = 8;
    double sellingFeesPct = 9;
    double sellingFees = 10;
}

message Rent {
    double priceMonth = 1;
    double utilitiesMonth = 2;
    double apprecPct = 3;
    double insurancePct = 4;
    double securityDep = 5;
}

message Taxes {
    bool singleFiler = 1;
    double itemDeductions = 2;
    double propertyPct = 3;
    bool addReet = 4;
    double reetLocalPct = 5;
}

message Financial {
    double incomeYear = 1;
    double investPct = 2;
    double inflatePct = 3;
    int32 sellYear = 4;
}